Add a slightly improved icon
(not perfect yet)

--- a/RepoZ.UI.Win.Wpf/MainWindow.xaml
+++ b/RepoZ.UI.Win.Wpf/MainWindow.xaml
@@ -17,7 +17,7 @@
         GlowBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
 		TitleCharacterCasing="Normal"
-        Title="RepoZ" Height="600" Width="450" Icon="App.ico"
+        Title="RepoZ" Height="600" Width="450"
         >
 	<Grid Margin="10">
 		<ListBox Name="lstRepositories" HorizontalContentAlignment="Stretch" MouseDoubleClick="lstRepositories_MouseDoubleClick" ContextMenuOpening="lstRepositories_ContextMenuOpening">
