Reduce context menu font size

--- a/RepoZ.UI.Win.Wpf/MainWindow.xaml
+++ b/RepoZ.UI.Win.Wpf/MainWindow.xaml
@@ -40,7 +40,7 @@
 				</DataTemplate>
 			</ListBox.ItemTemplate>
 			<ListBox.ContextMenu>
-				<ContextMenu Name="mnuRepositoryContext">
+				<ContextMenu Name="mnuRepositoryContext" FontSize="12">
 				</ContextMenu>
 			</ListBox.ContextMenu>
 		</ListBox>
