--- a/RepoZ.UI.Win.Wpf/App.xaml
+++ b/RepoZ.UI.Win.Wpf/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="RepoZ.UI.Win.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RepoZ.UI.Win.Wpf"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:RepoZ.UI.Win.Wpf">
     <Application.Resources>
 
         <ResourceDictionary>
