--- a/RepoZ.UI.Win.Wpf/App.xaml
+++ b/RepoZ.UI.Win.Wpf/App.xaml
@@ -1,10 +1,16 @@
 ﻿<Application x:Class="RepoZ.UI.Win.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RepoZ.UI.Win.Wpf">
+             xmlns:local="clr-namespace:RepoZ.UI.Win.Wpf"
+			 ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
-
-        <ResourceDictionary>
+		
+		<!--
+            Note that this application does not have a StartupUri declared, so no Window is automatically loaded.
+            Also, the ShutdownMode was set to explicit, so we have to close the application programmatically
+        -->
+		
+		<ResourceDictionary>
 
             <!--
                 Integrate MahApps to Material Design Toolkit
@@ -30,7 +36,11 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.MahApps;component/Themes/MaterialDesignTheme.MahApps.Fonts.xaml" />
                 <!-- CRASHES?! <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.MahApps;component/Themes/MaterialDesignTheme.MahApps.Flyout.xaml" />-->
 
-            </ResourceDictionary.MergedDictionaries>
+				<!-- merge NotifyIcon and related stuff into the application -->
+				<ResourceDictionary Source="NotifyIconResources.xaml" />
+
+			
+			</ResourceDictionary.MergedDictionaries>
 
 		
 			<!-- MahApps Brushes -->
@@ -65,5 +75,9 @@
 
 		</ResourceDictionary>
 
-    </Application.Resources>
+		
+	</Application.Resources>
+
+
+	
 </Application>
