Add a tray menu item to control windows startup
Fixes #27

--- a/RepoZ.UI.Win.Wpf/NotifyIconResources.xaml
+++ b/RepoZ.UI.Win.Wpf/NotifyIconResources.xaml
@@ -10,6 +10,14 @@
   -->
 	<ContextMenu x:Shared="false" x:Key="SysTrayMenu" >
 		<MenuItem Header="Open" Command="{Binding OpenCommand}" />
+        <MenuItem Header="Start with Windows" 
+                  Command="{Binding StartWithWindows}"
+                  Visibility="{Binding RelativeSource={RelativeSource Self}, Path=IsEnabled, Converter={StaticResource BooleanToVisibilityConverter}}"
+                  />
+        <MenuItem Header="Do not start with Windows" 
+                  Command="{Binding DoNotStartWithWindows}" 
+                  Visibility="{Binding RelativeSource={RelativeSource Self}, Path=IsEnabled, Converter={StaticResource BooleanToVisibilityConverter}}"
+                  />
 		<Separator />
 		<MenuItem Header="Exit" Command="{Binding ExitApplicationCommand}" />
 	</ContextMenu>
